# python-workbench

./: CMakeLists.txt  README.md  pyproject.toml
cmake/: clang-18-ubuntu.cmake  clang-linux.cmake
src/app/: main-gemini.cpp  main-old-api.cpp  main-with-repl-4o-old-api.cpp  main-with-repl-4o.cpp  main-with-repl-gemini.cpp
src/app/py/: pwb.py
src/pwb/: __main__.py  gui.py  pwb.py
tests/: test_cli.py
